# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.23.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Include unistd.h for isatty(). Thanks to <gokturk at binghamton.edu>,
	  see http://bugs.gentoo.org/show_bug.cgi?id=397589

*eix-0.23.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- scripts: Be less rigorous with set -f
	  This fixes some regressions of eix-0.23.4 (e.g. eix-remote).

*eix-0.23.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- scripts: Fix possible globbing problems
	- varsreader.cc: Improve error output for failed "source".
	  Thanks to Sergei Trofimovich <slyfox at gentoo.org> for the patch
	- autotools: Require automake-1.11.2 and disable dependency tracking
	  by default.
	- No unmap for empty md5 files
	- Fix minor include issues

*eix-0.23.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Now --print exits with 1 if variable is not known
	- Introduce --known-vars and use it with zsh-completion
	- Major rewrite of varsreader.cc: Allow concatenation of strings
	- scripts: Remove portageq usage completely (for runtime)

*eix-0.23.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- New cache method metadata-md5 to support metadata/md5-cache
	  in overlays
	- eix-update: Add option -v (and UPDATE_VERBOSE) for printing
	  effective cache method for every ebuild
	- scripts: Handle quoting of spaces in PORTDIR_OVERLAY properly
	- scripts: Do not rely on portageq being available
	- eix-functions.sh: Add PushEscaped, InitPortdirOverlay

*eix-0.23.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support basic /etc/portage/package.license checking
	- Add rudimentary bash-completion of
	  Marcel Philipp Partap <marcel.partap at rwth-aachen.de>, see
	  http://bugs.gentoo.org/show_bug.cgi?id=304819
	- Avoid install -D (does not work on BSD), see
	  http://bugs.gentoo.org/show_bug.cgi?id=382539

*eix-0.23.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>: