@@ -2,6 +2,10 @@
 
 *eix-0.23.6
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Introduce new cache method metadata-md5-or-flat and make it default
+	  for PORTDIR_CACHE_METHOD:
+	  http://developer.berlios.de/feature/?func=detailfeature&
+	  feature_id=5483&group_id=11597
 	- Include unistd.h for isatty(). Thanks to <gokturk at binghamton.edu>,
 	  see http://bugs.gentoo.org/show_bug.cgi?id=397589
 
